Fix #812: Unable to slide sidebar on mobile browser

--- a/source/css/_common/outline/sidebar/sidebar-toc.styl
+++ b/source/css/_common/outline/sidebar/sidebar-toc.styl
@@ -1,8 +1,3 @@
-.post-toc-wrap {
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
 .post-toc {
   font-size: $font-size-small;
 
