--- a/source/css/_common/outline/sidebar/sidebar.styl
+++ b/source/css/_common/outline/sidebar/sidebar.styl
@@ -29,11 +29,6 @@
   text-align: center;
 }
 
-.site-overview-wrap {
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
 .cc-license {
   margin-top: 10px;
   text-align: center;
